...
                            math.sin(angle) * size * 0.40 -
                            pointerSize / 2,
                        top: size / 2 -
                            math.cos(angle) * size * 0.40 -
                            pointerSize / 2,
                        child: Transform.rotate(
                          key: const Key('compassStatusPointer'),
                          angle: angle,
                          child: SizedBox(
                            width: pointerSize,
                            height: pointerSize,
                            child: CustomPaint(
                              painter: _DirectionArrowPainter(
...
